buen commit gente

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   href="https://fonts.googleapis.com/css?family=Space+Grotesk">
 
   <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;200;300;800;900">
+  link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap">
 
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@1,400;1,700&display=swap">
