--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template Vue.js 3 + Vue Router + SASS + Lucide Icons</title>
+    <title>T✧ 𝓟𝓵𝓪𝓷𝓮𝓽 𝓢𝓪𝓻𝓪 ✧ Design Creator"</title>
 
     <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Space+Grotesk">
